force-app/main/default/objects/Toggl__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>