force-app/main/default/objects/Toggl__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>