force-app/main/default/objects/Toggl__c/fields/Webhook_Validation_Code__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Validation_Code__c</fullName>
    <defaultValue>&apos;r3_digital&apos;</defaultValue>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Webhook Validation Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>