force-app/main/default/objects/Toggl__c/fields/Workspace_ID__c.field-meta.xml
<CustomField>
    <fullName>Workspace_ID__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Workspace ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>