force-app/main/default/objects/Toggl__c/listViews/Toggl_Setting.listView-meta.xml
<ListView>
    <fullName>Toggl_Setting</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Password__c</columns>
    <columns>Token__c</columns>
    <columns>Workspace_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toggl Setting</label>
</ListView>